--- a/next-portfolio/jsconfig.json
+++ b/next-portfolio/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*new": ["./src/*"]
+      "@/*newimport": ["./src/*"]
     }
   }
 }
